--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -47,7 +47,7 @@ td { padding: 2px 5px; }
     <hr />
     <h2>Documentation</h2>
     <ul>
-      <li><a href="/grails-mail/docs/manual/index.html">User guide</a></a>
+      <li><a href="/grails-mail/docs/index.html">User guide</a></a>
       <li><a href="/grails-mail/docs/api/index.html">Java API</a></li>
       <li><a href="/grails-mail/docs/gapi/index.html">Groovy API</a></li>
     </ul>
